[gd_scene load_steps=3 format=2]

[ext_resource path="res://Materiais/Imagens/Cazumbar.png" type="Texture" id=1]
[ext_resource path="res://Cenas/CazumbarSc.gd" type="Script" id=2]

[node name="Cazumbar" type="Sprite"]
texture = ExtResource( 1 )
centered = false
script = ExtResource( 2 )

[node name="Voltar" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = 9.0
margin_right = 116.0
margin_bottom = 58.0

[node name="Opt1" type="TextureButton" parent="."]
margin_left = 50.0
margin_top = 141.0
margin_right = 159.0
margin_bottom = 191.0

[node name="Opt2" type="TextureButton" parent="."]
margin_left = 51.0
margin_top = 214.0
margin_right = 162.0
margin_bottom = 268.0

[node name="Opt3" type="TextureButton" parent="."]
margin_left = 49.0
margin_top = 290.0
margin_right = 161.0
margin_bottom = 343.0

[node name="Opt4" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 359.0
margin_right = 161.0
margin_bottom = 410.0

[node name="Label" type="Label" parent="."]
margin_left = 63.0
margin_top = 152.0
margin_right = 148.0
margin_bottom = 182.0
text = "Arroz"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 59.0
margin_top = 223.0
margin_right = 156.0
margin_bottom = 256.0
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = 58.0
margin_top = 300.0
margin_right = 156.0
margin_bottom = 333.0
align = 1
valign = 1

[node name="Label4" type="Label" parent="."]
margin_left = 57.0
margin_top = 370.0
margin_right = 155.0
margin_bottom = 405.0
align = 1
valign = 1

[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="Opt1" to="." method="_on_Opt1_pressed"]
[connection signal="pressed" from="Opt2" to="." method="_on_Opt2_pressed"]
[connection signal="pressed" from="Opt3" to="." method="_on_Opt3_pressed"]
[connection signal="pressed" from="Opt4" to="." method="_on_Opt4_pressed"]
